--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,19 +1,25 @@
-$base-size: 16px;
-$lh       : 1.313;
-$fontmain :"Helvetica",
--apple-system,
-BlinkMacSystemFont,
-"Segoe UI",
-Roboto,
-"Helvetica Neue",
-Arial,
-"Noto Sans",
-sans-serif,
-"Apple Color Emoji",
-"Segoe UI Emoji",
-"Segoe UI Symbol",
-"Noto Color Emoji";
+$base-size   : 16px;
+$lh          : 1.313;
+// $fontmain :"Helvetica",
+// -apple-system,
+// BlinkMacSystemFont,
+// "Segoe UI",
+// Roboto,
+// "Helvetica Neue",
+// Arial,
+// "Noto Sans",
+// sans-serif,
+// "Apple Color Emoji",
+// "Segoe UI Emoji",
+// "Segoe UI Symbol",
+// "Noto Color Emoji";
+$fontmain    :'Segoe UI',
+Tahoma,
+Geneva,
+Verdana,
+sans-serif;
 $colormain          :#7265EB;
+$colorhome          : #F8B333;
 $colorsub           :#bb8d09;
 $common-text-color  :white;
 $common-btn-confirm : #185ba8;
