--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -24,6 +24,15 @@
     color: red !important;
 }
 
+.red-border {
+    border: 1px solid red !important;
+}
+
 .text-capitalize {
     text-transform: capitalize !important;
+}
+
+.input-label {
+    background-color: white;
+    padding         : 1px;
 }
