--- a/src/views/System/Header/Header.scss
+++ b/src/views/System/Header/Header.scss
@@ -7,7 +7,8 @@
     background-color: $colormain;
     color           : $common-text-color;
     height          : 40px;
-    position        : relative;
+    position        : sticky;
+    top             : 0;
     font-size       : $base-size - 2px;
 
     .languages {
