--- a/src/views/Customer/Restaurant/GeneralInformation/RestaurantGeneralInformation.scss
+++ b/src/views/Customer/Restaurant/GeneralInformation/RestaurantGeneralInformation.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables";
+@import "../../../../styles/variables";
 
 .restaurant-general-container {
     .restaurant-general-top {
@@ -47,7 +47,7 @@
         border-radius   : 5px;
         margin-top      : 15px;
         height          : 450px;
-        background-image: url("../../../assets/images/restaurant5.jpg");
+        background-image: url("../../../../assets/images/restaurant5.jpg");
     }
 
     .restaurant-general-bottom {
