--- a/src/views/Customer/Homepage/HomeHeader/HomeHeader.scss
+++ b/src/views/Customer/Homepage/HomeHeader/HomeHeader.scss
@@ -1,29 +1,148 @@
 @import "../../../../styles/variables";
 
 .home-header-container {
+    background-color: white;
+    z-index         : 99;
+    height          : 75px;
+    padding         : 5px 28px;
+    position        : sticky;
+    top             : 0;
+    display         : flex;
+    justify-content : space-between;
+    align-items     : center;
+    border-bottom   : 1px solid #ddd;
 
-    background-color   : white;
-    z-index            : 1000;
-    height             : 75px;
-    position           : sticky;
-    top                : 0;
-    // border          : 1px solid blue;
-    padding            : 5px 28px;
-    display            : flex;
-    justify-content    : space-between;
-    align-items        : center;
-    box-shadow         : 0px 4px 5px #3333331a;
+    .home-header-left {
+        width  : 70%;
+        display: flex;
+        gap    : 30px;
+        height : 100%;
 
-    .logo-icon {
-        width              : 175px;
-        height             : 100%;
-        // border          : 1px solid red;
-        background-image   : url("../../../../assets/images/logo.svg");
-        background-size    : contain !important;
-        cursor             : pointer;
+        .logo-icon {
+            width           : 175px;
+            height          : 100%;
+            background-image: url("../../../../assets/images/logo.svg");
+            background-size : contain !important;
+            cursor          : pointer;
+        }
+
+        .home-header-search {
+            // margin-left: 40px;
+            width      : calc(100% - 175px - 30px);
+            display    : flex;
+            align-items: center;
+            gap        : 20px;
+
+            .left-input {
+                height       : 42px;
+                width        : 50%;
+                padding      : 8px 12px;
+                border       : 1px solid #ddd;
+                border-radius: 10px;
+                outline      : none;
+
+                &:focus {
+                    box-shadow: 0px 3px 8px $box-shadow-color;
+                }
+            }
+
+            .center-select {
+                height       : 42px;
+                width        : 38%;
+                padding      : 8px 12px;
+                border       : 1px solid #ddd;
+                border-radius: 10px;
+                outline      : none;
+
+                &:focus {
+                    box-shadow: 0px 3px 8px $box-shadow-color;
+                }
+            }
+
+            .right-button {
+                height          : 42px;
+                width           : 10%;
+                background-color: $colorhome;
+                border-radius   : 10px;
+                color           : white;
+                border          : none;
+                font-weight     : 600;
+
+                &:hover {
+                    background-color: #FC8558;
+                }
+            }
+        }
     }
 
+    .home-header-right {
+        display    : flex;
+        align-items: center;
+        gap        : 15px;
+        user-select: none;
 
+        .right-login {
+            .btn-login {
+                height       : 40px;
+                border-radius: 5px;
+
+                &:hover {
+                    background-color: $colorhome;
+                    color           : white;
+                    border          : none;
+                }
+            }
+        }
+
+        .customer-welcome {
+            display    : flex;
+            align-items: center;
+            gap        : 5px;
+            position   : relative;
+            cursor     : pointer;
+
+            .customer-avatar {
+                height          : 40px;
+                width           : 40px;
+                border-radius   : 50%;
+                background-image: url("../../../../assets/images/customer-avatar-default.png");
+            }
+
+            .customer-name {}
+
+            .customer-logout {
+                position        : absolute;
+                top             : 60px;
+                background-color: white;
+                width           : 140px;
+                padding         : 10px;
+                box-shadow      : 0px 4px 8px $box-shadow-color;
+                display         : flex;
+                justify-content : space-between;
+                align-items     : center;
+                cursor          : pointer;
+
+                &:hover {
+                    color: $colorhome;
+                }
+            }
+        }
+
+        .right-language {
+            span {
+                padding: 0 5px;
+                cursor : pointer;
+
+                &.language-active {
+                    color: $colorhome;
+                }
+
+                &.language-vi {
+                    border-right: 1px solid #bbb;
+                }
+            }
+        }
+    }
 }
 
 .home-banner-container {
