--- a/src/views/Customer/Restaurant/Reviews/ReviewContent.scss
+++ b/src/views/Customer/Restaurant/Reviews/ReviewContent.scss
@@ -1,6 +1,6 @@
 .review-content-container {
     .review-content-top {
-        margin-top     : 25px;
+        margin-top     : 20px;
         display        : flex;
         justify-content: space-evenly;
 
@@ -8,6 +8,7 @@
             display       : flex;
             flex-direction: column;
             align-items   : center;
+            user-select   : none;
 
             .review-content-top-left-up {
                 font-size: 75px;
@@ -18,14 +19,21 @@
     .review-content-bottom {
         margin-top: 20px;
 
-        .review-content-bottom-up {}
+        .review-content-bottom-up {
+            margin-bottom: 15px;
+
+            .btn-write-review {
+                text-transform: none !important;
+
+                .write-review-icon {
+                    font-size   : 20px;
+                    margin-right: 5px;
+                }
+            }
+        }
 
         .review-content-bottom-down {
             .list-review {
-                // display          : flex;
-                // flex-direction   : column;
-                // gap           : 15px;
-
                 .content {
                     border-bottom: 1px solid #ddd;
                     padding      : 10px 0;
@@ -44,7 +52,7 @@
                             gap    : 15px;
 
                             .customer-information-left {
-                                background-image: url("../../../assets/images/restaurant5.jpg");
+                                background-image: url("../../../../assets/images/restaurant5.jpg");
                                 width           : 50px;
                                 height          : 50px;
                                 border-radius   : 50%;
