--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $colormain        : #7265EB;
 $colorhome        : #F8B333;
 $colorpink        : #FF6571;
 $colorpink-hover  : #f94251;
+$colorfooter      : #222933;
 $box-shadow-color : #3333331a;
 $color-hover-mui  : #F7F8FA;
 
