--- a/src/views/Customer/Restaurant/DetailRestaurant.scss
+++ b/src/views/Customer/Restaurant/DetailRestaurant.scss
@@ -40,7 +40,7 @@
     }
 
     #detail-restaurant-top {
-        scroll-margin-top: calc(75px + 45px);
+        scroll-margin-top: calc(75px + 45px + 1.5rem);
     }
 
     .restaurant-content {
